# di-container

./: README.md  pyproject.toml
src/: abc_container.py  abc_locator_interface.py  inject.py  static_locator.py
src/depydency/: abc_container.py  abc_locator_interface.py  inject.py  static_locator.py
src/depydency/exceptions/: abc_instance.py  bad_name.py  bad_type.py
src/depydency/provider/: abc_creator.py  abc_provider.py  alias.py  auto_resolve.py  callback.py  value.py
src/exceptions/: abc_instance.py  bad_name.py  bad_type.py  not_callable.py
src/provider/: abc_provider.py  abc_provider_interface.py  alias.py  auto_resolve.py  explicit_callable.py  explicit_value.py
