[project]
name = "depydency"
version = "1.0.4"
description = "Dependency Injection Container for Inversion of Control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Vladislav Nejedly", email = "vladislav.nejedly@gmail.com" }]

[project.urls]
Homepage = "https://github.com/vnejedly/depydency"
Issues = "https://github.com/vnejedly/depydency"
