[project]
name = "depydency"
version = "1.0.9"
description = "Dependency Injection (DI) Container for Inversion of Control (IoC) and automatic dependency tree resolution"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Vladislav Nejedly", email = "vladislav.nejedly@gmail.com" }]

[project.urls]
Homepage = "https://github.com/vnejedly/depydency"
Issues = "https://github.com/vnejedly/depydency"
